Add GOOGLE_API_KEY to .env.example
Added GOOGLE_API_KEY to the environment example file.

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Claude Model (if using Anthropic)
 CLAUDE_MODEL=claude-sonnet-4-20250514
 
+GOOGLE_API_KEY= AIzaSyDqRL81dNwAxlMxLMs2mT9wkjyorMFGwjA
+
 # --------------------------------------------
 # TWILIO WHATSAPP CONFIGURATION
 # --------------------------------------------
