--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
   "name": "whatsapp-ai-chatbot-render",
-  "version": "1.0.0",
-  "description": "Production WhatsApp AI Chatbot optimized for Render.com deployment",
+  "version": "2.0.0",
+  "description": "Production WhatsApp AI Chatbot with OpenAI/Claude/Gemini support",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [
-    "whatsapp",
-    "chatbot",
-    "ai",
-    "openai",
-    "claude",
-    "render",
-    "twilio",
-    "bengali"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "twilio": "^4.19.0",
@@ -28,11 +16,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": ">=18.0.0"
   }
 }
