--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "whatsapp-ai-chatbot-render",
-  "version": "2.0.0",
-  "description": "Production WhatsApp AI Chatbot with OpenAI/Claude/Gemini support",
+  "name": "whatsapp-gemini-bot",
+  "version": "1.0.0",
+  "description": "WhatsApp AI Bot with Google Gemini",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
