--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "twilio": "^4.19.0",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-cron": "^4.2.1",
+    "pg": "^8.11.3",
+    "twilio": "^4.19.0"
   },
   "engines": {
     "node": ">=18.0.0"
